<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="student_id">Student ID</string>
    <string name="app_logo">App Logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don’t have account? Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="profile">Profile</string>
    <string name="username">Username\n</string>
</resources>